--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 		<!-- Header -->
 			<section id="header" class="dark">
 				<header>
-					<h1>Welcome to Tessellate</h1>
-					<p>A free responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
+					<h1>NVJ Repo</h1>
+					<p>Data monkey for those needs</p>
 				</header>
 				<footer>
-					<a href="#first" class="button scrolly">Proceed to second phase</a>
+					<a href="#first" class="button scrolly">&#129095;</a>
 				</footer>
 			</section>
 
@@ -28,9 +28,9 @@
 			<section id="first" class="main">
 				<header>
 					<div class="container">
-						<h2>Tessellate is a free responsive site template</h2>
-						<p>Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet consequat<br />
-						feugiat. Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet.</p>
+						<h2>About</h2>
+						<p>Hi, my name is James - a person who has great love for data<br />
+						Currently, i am working as a Analytical Engineering in Joon Solutions</p>
 					</div>
 				</header>
 				<div class="content dark style1 featured">
@@ -40,42 +40,34 @@
 								<section>
 									<span class="feature-icon"><span class="icon fa-clock"></span></span>
 									<header>
-										<h3>Gravida</h3>
+										<h3>Data Engineering</h3>
 									</header>
-									<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales.
-									Diam tempor dui lacinia accumsan vivamus. Gravida dis placerat lectus
-									ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
-									accumsan vivamus.</p>
+									<p>Running Data pipeline<br>
+										Perform ETL, ELT
+									</p>
 								</section>
 							</div>
 							<div class="col-4 col-12-narrow">
 								<section>
 									<span class="feature-icon"><span class="icon solid fa-bolt"></span></span>
 									<header>
-										<h3>Vivamus</h3>
+										<h3>Analytical Engineering</h3>
 									</header>
-									<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales.
-									Diam tempor dui lacinia accumsan vivamus. Gravida dis placerat lectus
-									ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
-									accumsan vivamus.</p>
+									<p>Trnasforming and modeling data</p>
 								</section>
 							</div>
 							<div class="col-4 col-12-narrow">
 								<section>
 									<span class="feature-icon"><span class="icon solid fa-cloud"></span></span>
 									<header>
-										<h3>Accumsan</h3>
+										<h3>Data Analyst</h3>
 									</header>
-									<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales.
-									Diam tempor dui lacinia accumsan vivamus. Gravida dis placerat lectus
-									ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
-									accumsan vivamus.</p>
+									<p>Visualization<br>
+									Scraping Insigts and provide recommendation<br>
+									for decision making
+									</p>
 								</section>
 							</div>
-							<div class="col-12">
-								<footer>
-									<a href="#second" class="button scrolly">Gravida tempor lacinia</a>
-								</footer>
 							</div>
 						</div>
 					</div>
