upgrade about section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<section id="header" class="dark">
 				<header>
 					<h1>NVJ Repo</h1>
-					<p>Data monkey for those needs</p>
+					<p>Data monkey for those who need</p>
 				</header>
 				<footer>
 					<a href="#first" class="button scrolly">&#129095;</a>
@@ -27,8 +27,17 @@
 				<header>
 					<div class="container">
 						<h2>About</h2>
-						<p>Hi, my name is James - a person who has great love for data<br />
-						Currently, i am working as a Analytical Engineering in Joon Solutions</p>
+						<p>Hi, my name is James.<br />
+						Over the past 3 years, after working with various stakeholders, translaring countless business requests into data products,<br />
+						i become so obssessed and questionable about capability and potential of data in solving our day to day problems. <br />
+						<br />
+						I got experience in different type of business, from enterprise to startup, and currently working as an <br />
+						Analytical Engineering in Joon Solutions - a fast-growing data consultancy in South East Asia.<br />
+						<br />
+						The overal tech industry has evolved substantially over the past 10 year, so as data.<br />
+						I am so thrilled in catching up with mordern data practices and applying them to help business<br />
+						solve their painpoints and problems faster and easier then ever.
+						</p>
 					</div>
 				</header>
 				<div class="content dark style1 featured">
@@ -336,34 +345,6 @@
 				</div>
 			</section>
 		-->
-
-		<!-- Fourth -->
-			<section id="fourth" class="main">
-				<header>
-					<div class="container">
-						<h2>Sed feugiat ipsum consequat</h2>
-						<p>Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet consequat<br />
-						feugiat. Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet.</p>
-					</div>
-				</header>
-				<div class="content style4 featured">
-					<div class="container medium">
-						<form method="post" action="#">
-							<div class="row gtr-50">
-								<div class="col-6 col-12-mobile"><input type="text" placeholder="Name" /></div>
-								<div class="col-6 col-12-mobile"><input type="text" placeholder="Email" /></div>
-								<div class="col-12"><textarea name="message" placeholder="Message"></textarea></div>
-								<div class="col-12">
-									<ul class="actions special">
-										<li><input type="submit" class="button" value="Send Message" /></li>
-										<li><input type="reset" class="button alt" value="Clear Form" /></li>
-									</ul>
-								</div>
-							</div>
-						</form>
-					</div>
-				</div>
-			</section>
 
 		<!-- Footer -->
 			<section id="footer">
