add structure design

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			<section id="second" class="main">
 				<header>
 					<div class="container">
-						<h2>Euismod sed feugiat lorem tempus magna</h2>
+						<h2>Certificate</h2>
 						<p>Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet consequat<br />
 						feugiat. Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet.</p>
 					</div>
@@ -95,7 +95,7 @@
 						<div class="row">
 							<div class="col-4 col-12-narrow">
 								<section>
-									<h3>Augue vivamus sed ipsum commodo lorem dolor</h3>
+									<h3>Portfolio</h3>
 									<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales. Diam
 									tempor dui lacinia eget ornare varius gravida. Gravida dis placerat lectus ante
 									vel nunc euismod est turpis sodales. Diam tempor dui lacinia accumsan vivamus
@@ -128,9 +128,7 @@
 			<section id="third" class="main">
 				<header>
 					<div class="container">
-						<h2>Ornare varius lorem ipsum ante lectus</h2>
-						<p>Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet consequat<br />
-						feugiat. Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet.</p>
+						<h2>A bit more knowledge below</h2>
 					</div>
 				</header>
 				<div class="content dark style3">
@@ -138,7 +136,7 @@
 						<span class="image featured"><img src="images/pic07.jpg" alt="" /></span>
 						<div class="row">
 							<div class="col-4 col-12-narrow">
-								<h3>Diam vivamus turpis lorem sodales lectus ornare</h3>
+								<h3>Blog</h3>
 								<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales. Diam
 								tempor dui lacinia eget ornare varius gravida. Gravida dis placerat lectus ante
 								vel nunc euismod est turpis sodales. Diam tempor dui lacinia accumsan vivamus
