--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<div class="container">
 						<h2>About</h2>
 						<p>Hi, my name is James - a person who has great love for data<br />
-						Currently, i am working as a Analytical Engineering in Joon Solutions</p>
+						Currently, i am working as a Analytical Engineering in NVJ Solutions</p>
 					</div>
 				</header>
 				<div class="content dark style1 featured">
@@ -341,9 +341,8 @@
 			<section id="fourth" class="main">
 				<header>
 					<div class="container">
-						<h2>Sed feugiat ipsum consequat</h2>
-						<p>Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet consequat<br />
-						feugiat. Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet.</p>
+						<h2>Contact</h2>
+						<p>For work for future collaboration, feel free to send me messages below</p>
 					</div>
 				</header>
 				<div class="content style4 featured">
