--- a/index.html
+++ b/index.html
@@ -87,16 +87,15 @@
 							<div class="col-4 col-12-narrow">
 								<section>
 									<h3>About me</h3>
-									<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales. Diam
-									tempor dui lacinia eget ornare varius gravida. Gravida dis placerat lectus ante
-									vel nunc euismod est turpis sodales. Diam tempor dui lacinia accumsan vivamus
-									augue cubilia vivamus nisi eu eget ornare varius gravida euismod.  Gravida dis
-									lorem ipsum dolor placerat magna tempus feugiat.</p>
-									<p>Lectus ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
-									accumsan vivamus augue cubilia vivamus nisi eu eget ornare varius gravida dolore
-									euismod lorem ipsum dolor.</p>
+									<p>I was born and raised in Vung Tau, Vietnam. At the age of 18, I start my
+									journey of being a university student in Melbourne, Australia. My first data
+									job was as a data analyst for a tech startup. My first data job was as a data
+									analyst for a tech startup. At the moment, I work at one of the top boutique
+									consulting companies and start my own business of data consultancy.</p>
+									<p>My business focus on developing data solutions for clients to help them leverage
+									data as a valuable asset to make tactical decisions.</p>
 									<footer>
-										<a href="#third" class="button scrolly">More about our services/a>
+										<a href="#third" class="button scrolly">More about our services</a>
 									</footer>
 								</section>
 							</div>
