--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
 					<div class="container">
 						<h2>About</h2>
 						<p>Hi, my name is James - a person who has great love for data<br />
-						Currently, i am working as a Analytical Engineering in NVJ Solutions</p>
+					       At the moment, I work at one of the top boutique consulting companies and 
+							start my own business of data consultancy.
+						
+						</p>
 					</div>
 				</header>
 				<div class="content dark style1 featured">
@@ -87,13 +90,16 @@
 							<div class="col-4 col-12-narrow">
 								<section>
 									<h3>About me</h3>
-									<p>I was born and raised in Vung Tau, Vietnam. At the age of 18, I start my
-									journey of being a university student in Melbourne, Australia. My first data
-									job was as a data analyst for a tech startup. My first data job was as a data
-									analyst for a tech startup. At the moment, I work at one of the top boutique
-									consulting companies and start my own business of data consultancy.</p>
-									<p>My business focus on developing data solutions for clients to help them leverage
+									<p>My business focuses on developing data solutions for clients to help them leverage
 									data as a valuable asset to make tactical decisions.</p>
+									<p> At NVJ, our services line includes, but not limited to: <br />
+                                                                            ✅ Data roadmap Architecture <br />
+                                                                            ✅ Modern data stack implementation, using DBT <br />
+                                                                            ✅ SQL, Lookml, and Python developer <br />
+                                                                            ✅ Dashboard creation in Looker, Google Data Studio, Power BI, and Lightdash <br />
+                                                                            ✅ Data wrangling, cleaning, transformation and visualization <br />
+                                                                            ✅ ETL, ELT, and loading data from multiple sources to the Data warehouse <br />
+                                                                            ✅ GCP, Azure products implementation <br />
 									<footer>
 										<a href="#third" class="button scrolly">More about our services</a>
 									</footer>
