--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<header>
 					<div class="container">
 						<h2>About</h2>
-						<p>Hi, my name is James - a person who has great love for data<br />
+						<p>Hi, my name is James - a person who has a great love for data<br />
 					       At the moment, I work at one of the top boutique consulting companies and 
 							start my own business of data consultancy.
 						
@@ -79,9 +79,10 @@
 			<section id="second" class="main">
 				<header>
 					<div class="container">
-						<h2>Euismod sed feugiat lorem tempus magna</h2>
-						<p>Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet consequat<br />
-						feugiat. Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet.</p>
+						<h2>Mordern data lanscape</h2>
+						<p> Nowadays, we all see data appearing in the industry, from FMCG, E-commerce, Construction Aviation, Medicine, you name it. <br />
+						With the birth of AI and ML models, more and more business invested heavily in Data infrastructure and scaled up their <br />
+						data team to exploit the full the potential of data to achieve their objectives.</p>						
 					</div>
 				</header>
 				<div class="content dark style2">
@@ -97,9 +98,10 @@
                                                                             ✅ Modern data stack implementation, using DBT <br />
                                                                             ✅ SQL, Lookml, and Python developer <br />
                                                                             ✅ Dashboard creation in Looker, Google Data Studio, Power BI, and Lightdash <br />
-                                                                            ✅ Data wrangling, cleaning, transformation and visualization <br />
+                                                                            ✅ Data wrangling, cleaning, transformation, and visualization <br />
                                                                             ✅ ETL, ELT, and loading data from multiple sources to the Data warehouse <br />
                                                                             ✅ GCP, Azure products implementation <br />
+									</p>
 									<footer>
 										<a href="#third" class="button scrolly">More about our services</a>
 									</footer>
