--- a/index.html
+++ b/index.html
@@ -126,9 +126,10 @@
 			<section id="third" class="main">
 				<header>
 					<div class="container">
-						<h2>Ornare varius lorem ipsum ante lectus</h2>
-						<p>Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet consequat<br />
-						feugiat. Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet.</p>
+						<h2>Mordern data stack</h2>
+						<p>A modern data stack offers increased agility and scalability by leveraging cloud-based infrastructure and flexible, modular tools for <br />
+						data integration, processing, and analysis, enabling organizations to adapt quickly to evolving data needs. It also facilitates a more streamlined  <br />
+					        and collaborative approach to data management, empowering teams to collaborate effectively across the entire data lifecycle from ingestion to visualization.</p>
 					</div>
 				</header>
 				<div class="content dark style3">
