--- a/index.html
+++ b/index.html
@@ -90,17 +90,17 @@
 						<div class="row">
 							<div class="col-4 col-12-narrow">
 								<section>
-									<h3>About me</h3>
+									<h3>Our services</h3>
 									<p>My business focuses on developing data solutions for clients to help them leverage
 									data as a valuable asset to make tactical decisions.</p>
 									<p> At NVJ, our services line includes, but not limited to: <br />
-                                                                            ✅ Data roadmap Architecture <br />
-                                                                            ✅ Modern data stack implementation, using DBT <br />
-                                                                            ✅ SQL, Lookml, and Python developer <br />
-                                                                            ✅ Dashboard creation in Looker, Google Data Studio, Power BI, and Lightdash <br />
-                                                                            ✅ Data wrangling, cleaning, transformation, and visualization <br />
-                                                                            ✅ ETL, ELT, and loading data from multiple sources to the Data warehouse <br />
-                                                                            ✅ GCP, Azure products implementation <br />
+                                                                            - Data roadmap Architecture <br />
+                                                                            - Modern data stack implementation, using DBT <br />
+                                                                            - SQL, Lookml, and Python developer <br />
+                                                                            - Dashboard creation in Looker, Google Data Studio, Power BI, and Lightdash <br />
+                                                                            - Data wrangling, cleaning, transformation, and visualization <br />
+                                                                            - ETL, ELT, and loading data from multiple sources to the Data warehouse <br />
+                                                                            - GCP, Azure products implementation <br />
 									</p>
 									<footer>
 										<a href="#third" class="button scrolly">More about our services</a>
@@ -137,17 +137,20 @@
 						<span class="image featured"><img src="images/pic07.jpg" alt="" /></span>
 						<div class="row">
 							<div class="col-4 col-12-narrow">
-								<h3>Diam vivamus turpis lorem sodales lectus ornare</h3>
-								<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales. Diam
-								tempor dui lacinia eget ornare varius gravida. Gravida dis placerat lectus ante
-								vel nunc euismod est turpis sodales. Diam tempor dui lacinia accumsan vivamus
-								augue cubilia vivamus nisi eu eget ornare varius gravida euismod.  Gravida dis
-								lorem ipsum dolor placerat magna tempus feugiat.</p>
-								<p>Lectus ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
-								accumsan vivamus augue cubilia vivamus nisi eu eget ornare varius gravida dolore
-								euismod lorem ipsum dolor sit amet consequat. vivamus nisi eu eget ornare varius
-								gravida dolore euismod lorem ipsum dolor sit amet consequat. vivamus nisi eu
-								eget ornare et magna.</p>
+								<h3>The whole process</h3>
+								<p>The modern data stack encompasses a comprehensive set of tools and processes designed 
+								to efficiently manage and derive insights from data. It typically begins with data ingestion, 
+								where tools like Apache Kafka or Amazon Kinesis capture and stream data from various sources 
+								into a data lake or data warehouse, such as Snowflake or Google BigQuery.</p>
+								<p>Once the data is centralized, transformation and processing occurs using platforms like Apache Spark 
+								or Databricks to clean, enrich, and prepare the data for analysis. This is where tools like dbt (data build tool) 
+								come into play, allowing for data transformation in a version-controlled, testable manner, 
+								enhancing data quality and reproducibility.</p>
+								<p>Next, data visualization tools like Tableau, Looker, or Power BI are employed to create intuitive dashboards 
+								and reports, enabling stakeholders to extract actionable insights. Throughout this process, data governance and 
+								security measures are implemented to ensure compliance and protect sensitive information. Overall, the modern data 
+								stack emphasizes agility, scalability, and collaboration, empowering organizations to harness the full potential of 
+								their data assets for informed decision-making.</p>
 							</div>
 							<div class="col-4 col-12-narrow">
 								<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales. Diam
