--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 						<h2>Mordern data lanscape</h2>
 						<p> Nowadays, we all see data appearing in the industry, from FMCG, E-commerce, Construction Aviation, Medicine, you name it. <br />
 						With the birth of AI and ML models, more and more business invested heavily in Data infrastructure and scaled up their <br />
-						data team to exploit the full the potential of data to achieve their objectives.</p>						
+						data team to exploit the full potential of data to achieve their objectives.</p>						
 					</div>
 				</header>
 				<div class="content dark style2">
@@ -128,7 +128,7 @@
 					<div class="container">
 						<h2>Mordern data stack</h2>
 						<p>A modern data stack offers increased agility and scalability by leveraging cloud-based infrastructure and flexible, modular tools for <br />
-						data integration, processing, and analysis, enabling organizations to adapt quickly to evolving data needs. It also facilitates a more streamlined  <br />
+						data integration, processing, and analysis, enabling organizations to adapt quickly to evolving data needs. It also facilitates a more streamlined <br />
 					        and collaborative approach to data management, empowering teams to collaborate effectively across the entire data lifecycle from ingestion to visualization.</p>
 					</div>
 				</header>
@@ -137,46 +137,42 @@
 						<span class="image featured"><img src="images/pic07.jpg" alt="" /></span>
 						<div class="row">
 							<div class="col-4 col-12-narrow">
-								<h3>The whole process</h3>
+								<h3>The whole process and platforms we use</h3>
 								<p>The modern data stack encompasses a comprehensive set of tools and processes designed 
 								to efficiently manage and derive insights from data. It typically begins with data ingestion, 
 								where tools like Apache Kafka or Amazon Kinesis capture and stream data from various sources 
 								into a data lake or data warehouse, such as Snowflake or Google BigQuery.</p>
-								<p>Once the data is centralized, transformation and processing occurs using platforms like Apache Spark 
+								<p> Once the data is centralized, transformation and processing occurs using platforms like Apache Spark 
 								or Databricks to clean, enrich, and prepare the data for analysis. This is where tools like dbt (data build tool) 
 								come into play, allowing for data transformation in a version-controlled, testable manner, 
-								enhancing data quality and reproducibility.</p>
-								<p>Next, data visualization tools like Tableau, Looker, or Power BI are employed to create intuitive dashboards 
+								enhancing data quality and reproducibility. </p>
+								<p> Next, data visualization tools like Tableau, Looker, or Power BI are employed to create intuitive dashboards 
 								and reports, enabling stakeholders to extract actionable insights. Throughout this process, data governance and 
 								security measures are implemented to ensure compliance and protect sensitive information. Overall, the modern data 
 								stack emphasizes agility, scalability, and collaboration, empowering organizations to harness the full potential of 
-								their data assets for informed decision-making.</p>
+								their data assets for informed decision-making. </p>
 							</div>
 							<div class="col-4 col-12-narrow">
-								<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales. Diam
-								tempor dui lacinia eget ornare varius gravida. Gravida dis placerat lectus ante
-								vel nunc euismod est turpis sodales. Diam tempor dui lacinia accumsan vivamus
-								augue cubilia vivamus nisi eu eget ornare varius gravida euismod.  Gravida dis
-								lorem ipsum dolor placerat magna tempus feugiat.</p>
-								<p>Lectus ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
-								accumsan vivamus augue cubilia vivamus nisi eu eget ornare varius gravida dolore
-								euismod lorem ipsum dolor sit amet consequat eget ornare varius gravida euismod.
-								Gravida dis lorem ipsum dolor placerat magna tempus feugiat magna tempus lorem.</p>
-								<p>Lectus ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
-								accumsan vivamus augue cubilia.</p>
+								<p>The ELT (Extract, Load, Transform) process involves extracting data from various sources, loading it into a storage system, 
+								and then transforming it for analysis. Initially, data is extracted from sources such as databases, APIs, or files. Following
+								extraction, the data is loaded into a storage system like a data lake or data warehouse without significant transformation. 
+								<p>Once stored, the data is transformed into a usable format for analysis using tools and processes like SQL queries, data pipelines, 
+								or ETL (Extract, Transform, Load) tools. This approach allows for more flexibility and scalability in handling large volumes of data, 
+								as transformations can be performed closer to the point of analysis.</p> 
+								<p>ELT processes are often associated with modern data architectures 
+								that leverage cloud-based storage and processing resources, enabling organizations to derive insights from diverse and 
+								massive datasets efficiently.</p>
 							</div>
 							<div class="col-4 col-12-narrow">
-								<p>Placerat lectus ante vel nunc euismod est turpis sodales. Diam tempor dui
-								lacinia eget ornare varius gravida. Gravida dis placerat lectus ante vel nunc
-								euismod est turpis sodales. Diam tempor dui lacinia accumsan vivamus augue
-								cubilia vivamus nisi eu eget ornare varius gravida euismod.  Gravida dis
-								lorem ipsum dolor placerat magna tempus feugiat. Lectus ante vel nunc euismod
-								est turpis sodales. Diam tempor dui lacinia dolore.</p>
-								<p>Accumsan vivamus augue cubilia vivamus nisi eu eget ornare varius gravida
-								dolore euismod lorem ipsum dolor sit amet conseismod lorem ipsum dolor sit amet
-								consequat lorem ipsum consequat feugiat sed tempus euismod feugiat veroeros.</p>
+								<p>NVJ leverage Airbyte, an open-source data integration platform, to streamline its data processes in various ways. Firstly, 
+								Airbyte facilitates unified data collection by connecting to diverse sources like databases, APIs, and file systems, simplifying 
+								the process without requiring custom solutions. 
+								<p>Secondly, it enables centralized data warehousing, allowing data from multiple sources, including Shopify, Facebook ads, Google ads or more 
+								to be replicated to a single destination, aiding in analytics and reporting. Additionally, Airbyte supports real-time data replication, ensuring up-to-date 
+								information for decision-making. Its scalability and flexibility accommodate growing data needs, while its cost-effectiveness reduces dependency on 
+								expensive tools, making it a valuable asset for enhancing data operations and facilitating informed decision-making across your organization.</p>
 								<footer>
-									<a href="#fourth" class="button scrolly">Ipsum ornare lorem dolor</a>
+									<a href="#fourth" class="button scrolly">Contact me</a>
 								</footer>
 							</div>
 						</div>
