--- a/index.html
+++ b/index.html
@@ -109,12 +109,12 @@
 							</div>
 							<div class="col-8 col-12-narrow">
 								<div class="row">
-									<div class="col-6"><a href="#" class="image fit"><img src="images/pic01.jpg" alt="" /></a></div>
-									<div class="col-6"><a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a></div>
-									<div class="col-6"><a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a></div>
-									<div class="col-6"><a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a></div>
-									<div class="col-6"><a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a></div>
-									<div class="col-6"><a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a></div>
+									<div class="col-6"><a href="#" class="image fit"><img src="images/data_pic01.jpg" alt="" /></a></div>
+									<div class="col-6"><a href="#" class="image fit"><img src="images/data_pic02.jpg" alt="" /></a></div>
+									<div class="col-6"><a href="#" class="image fit"><img src="images/data_pic03.jpg" alt="" /></a></div>
+									<div class="col-6"><a href="#" class="image fit"><img src="images/data_pic04.jpg" alt="" /></a></div>
+									<div class="col-6"><a href="#" class="image fit"><img src="images/data_pic05.jpg" alt="" /></a></div>
+									<div class="col-6"><a href="#" class="image fit"><img src="images/data_pic06.jpg" alt="" /></a></div>
 								</div>
 							</div>
 						</div>
