--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 									<div class="col-6"><a href="#" class="image fit"><img src="images/data_pic03.jpg" alt="" /></a></div>
 									<div class="col-6"><a href="#" class="image fit"><img src="images/data_pic04.jpg" alt="" /></a></div>
 									<div class="col-6"><a href="#" class="image fit"><img src="images/data_pic05.jpg" alt="" /></a></div>
-									<div class="col-6"><a href="#" class="image fit"><img src="images/data_pic06.jpg" alt="" /></a></div>
+									<div class="col-6"><a href="#" class="image fit"><img src="images/datas_pic06.jpg" alt="" /></a></div>
 								</div>
 							</div>
 						</div>
@@ -134,7 +134,7 @@
 				</header>
 				<div class="content dark style3">
 					<div class="container">
-						<span class="image featured"><img src="images/pic07.jpg" alt="" /></span>
+						<span class="image featured"><img src="images/data_pic07.jpg" alt="" /></span>
 						<div class="row">
 							<div class="col-4 col-12-narrow">
 								<h3>The whole process and platforms we use</h3>
@@ -374,11 +374,9 @@
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-					<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="https://nvjrepo.notion.site/Hi-I-m-James-c44b5f1a6e184e0d983243e27bf3e63d?pvs=74" class="icon brands fa-notion"><span class="label">Notion</span></a></li>
+					<li><a href="https://www.linkedin.com/in/nam-nguyen-james-227a64114/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+					<li><a href="https://github.com/nvjrepo" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 				</ul>
 				<div class="copyright">
 					<ul class="menu">
